# app/user/api/data.pb.go
@@ -21,6 +21,52 @@ const (
 	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
 )
 
+type ProjectType int32
+
+const (
+	ProjectType_LANDING ProjectType = 0
+	ProjectType_CMS     ProjectType = 1
+)
+
+// Enum value maps for ProjectType.
+var (
+	ProjectType_name = map[int32]string{
+		0: "LANDING",
+		1: "CMS",
+	}
+	ProjectType_value = map[string]int32{
+		"LANDING": 0,
+		"CMS":     1,
+	}
+)
+
+func (x ProjectType) Enum() *ProjectType {
+	p := new(ProjectType)
+	*p = x
+	return p
+}
+
+func (x ProjectType) String() string {
+	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
+}
+
+func (ProjectType) Descriptor() protoreflect.EnumDescriptor {
+	return file_app_user_api_data_proto_enumTypes[0].Descriptor()
+}
+
+func (ProjectType) Type() protoreflect.EnumType {
+	return &file_app_user_api_data_proto_enumTypes[0]
+}
+
+func (x ProjectType) Number() protoreflect.EnumNumber {
+	return protoreflect.EnumNumber(x)
+}
+
+// Deprecated: Use ProjectType.Descriptor instead.
+func (ProjectType) EnumDescriptor() ([]byte, []int) {
+	return file_app_user_api_data_proto_rawDescGZIP(), []int{0}
+}
+
 type Project struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
@@ -29,6 +75,8 @@ type Project struct {
 	Id             string `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
 	Name           string `protobuf:"bytes,2,opt,name=name,proto3" json:"name,omitempty"`
 	CompressString string `protobuf:"bytes,3,opt,name=compress_string,json=compressString,proto3" json:"compress_string,omitempty"`
+	CreatedAt      int64  `protobuf:"varint,4,opt,name=created_at,json=createdAt,proto3" json:"created_at,omitempty"`
+	UpdatedAt      int64  `protobuf:"varint,5,opt,name=updated_at,json=updatedAt,proto3" json:"updated_at,omitempty"`
 }
 
 func (x *Project) Reset() {
@@ -84,6 +132,20 @@ func (x *Project) GetCompressString() string {
 	return ""
 }
 
+func (x *Project) GetCreatedAt() int64 {
+	if x != nil {
+		return x.CreatedAt
+	}
+	return 0
+}
+
+func (x *Project) GetUpdatedAt() int64 {
+	if x != nil {
+		return x.UpdatedAt
+	}
+	return 0
+}
+
 var File_app_user_api_data_proto protoreflect.FileDescriptor
 
 var file_app_user_api_data_proto_rawDesc = []byte{
@@ -91,16 +153,22 @@ var file_app_user_api_data_proto_rawDesc = []byte{
 	0x61, 0x74, 0x61, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x15, 0x62, 0x75, 0x69, 0x6c, 0x64,
 	0x69, 0x66, 0x79, 0x2e, 0x61, 0x70, 0x70, 0x2e, 0x75, 0x73, 0x65, 0x72, 0x2e, 0x61, 0x70, 0x69,
 	0x1a, 0x1c, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x61, 0x6e, 0x6e,
-	0x6f, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x56,
-	0x0a, 0x07, 0x50, 0x72, 0x6f, 0x6a, 0x65, 0x63, 0x74, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64, 0x18,
-	0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x02, 0x69, 0x64, 0x12, 0x12, 0x0a, 0x04, 0x6e, 0x61, 0x6d,
-	0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x27, 0x0a,
-	0x0f, 0x63, 0x6f, 0x6d, 0x70, 0x72, 0x65, 0x73, 0x73, 0x5f, 0x73, 0x74, 0x72, 0x69, 0x6e, 0x67,
-	0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0e, 0x63, 0x6f, 0x6d, 0x70, 0x72, 0x65, 0x73, 0x73,
-	0x53, 0x74, 0x72, 0x69, 0x6e, 0x67, 0x42, 0x2c, 0x5a, 0x2a, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62,
-	0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x74, 0x68, 0x65, 0x73, 0x69, 0x73, 0x4b, 0x31, 0x39, 0x2f, 0x62,
-	0x75, 0x69, 0x6c, 0x64, 0x69, 0x66, 0x79, 0x2f, 0x61, 0x70, 0x70, 0x2f, 0x75, 0x73, 0x65, 0x72,
-	0x2f, 0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x6f, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x94,
+	0x01, 0x0a, 0x07, 0x50, 0x72, 0x6f, 0x6a, 0x65, 0x63, 0x74, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64,
+	0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x02, 0x69, 0x64, 0x12, 0x12, 0x0a, 0x04, 0x6e, 0x61,
+	0x6d, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x27,
+	0x0a, 0x0f, 0x63, 0x6f, 0x6d, 0x70, 0x72, 0x65, 0x73, 0x73, 0x5f, 0x73, 0x74, 0x72, 0x69, 0x6e,
+	0x67, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0e, 0x63, 0x6f, 0x6d, 0x70, 0x72, 0x65, 0x73,
+	0x73, 0x53, 0x74, 0x72, 0x69, 0x6e, 0x67, 0x12, 0x1d, 0x0a, 0x0a, 0x63, 0x72, 0x65, 0x61, 0x74,
+	0x65, 0x64, 0x5f, 0x61, 0x74, 0x18, 0x04, 0x20, 0x01, 0x28, 0x03, 0x52, 0x09, 0x63, 0x72, 0x65,
+	0x61, 0x74, 0x65, 0x64, 0x41, 0x74, 0x12, 0x1d, 0x0a, 0x0a, 0x75, 0x70, 0x64, 0x61, 0x74, 0x65,
+	0x64, 0x5f, 0x61, 0x74, 0x18, 0x05, 0x20, 0x01, 0x28, 0x03, 0x52, 0x09, 0x75, 0x70, 0x64, 0x61,
+	0x74, 0x65, 0x64, 0x41, 0x74, 0x2a, 0x23, 0x0a, 0x0b, 0x50, 0x72, 0x6f, 0x6a, 0x65, 0x63, 0x74,
+	0x54, 0x79, 0x70, 0x65, 0x12, 0x0b, 0x0a, 0x07, 0x4c, 0x41, 0x4e, 0x44, 0x49, 0x4e, 0x47, 0x10,
+	0x00, 0x12, 0x07, 0x0a, 0x03, 0x43, 0x4d, 0x53, 0x10, 0x01, 0x42, 0x2c, 0x5a, 0x2a, 0x67, 0x69,
+	0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x74, 0x68, 0x65, 0x73, 0x69, 0x73, 0x4b,
+	0x31, 0x39, 0x2f, 0x62, 0x75, 0x69, 0x6c, 0x64, 0x69, 0x66, 0x79, 0x2f, 0x61, 0x70, 0x70, 0x2f,
+	0x75, 0x73, 0x65, 0x72, 0x2f, 0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -115,9 +183,11 @@ func file_app_user_api_data_proto_rawDescGZIP() []byte {
 	return file_app_user_api_data_proto_rawDescData
 }
 
+var file_app_user_api_data_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
 var file_app_user_api_data_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
 var file_app_user_api_data_proto_goTypes = []interface{}{
-	(*Project)(nil), // 0: buildify.app.user.api.Project
+	(ProjectType)(0), // 0: buildify.app.user.api.ProjectType
+	(*Project)(nil),  // 1: buildify.app.user.api.Project
 }
 var file_app_user_api_data_proto_depIdxs = []int32{
 	0, // [0:0] is the sub-list for method output_type
@@ -151,13 +221,14 @@ func file_app_user_api_data_proto_init() {
 		File: protoimpl.DescBuilder{
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_app_user_api_data_proto_rawDesc,
-			NumEnums:      0,
+			NumEnums:      1,
 			NumMessages:   1,
 			NumExtensions: 0,
 			NumServices:   0,
 		},
 		GoTypes:           file_app_user_api_data_proto_goTypes,
 		DependencyIndexes: file_app_user_api_data_proto_depIdxs,
+		EnumInfos:         file_app_user_api_data_proto_enumTypes,
 		MessageInfos:      file_app_user_api_data_proto_msgTypes,
 	}.Build()
 	File_app_user_api_data_proto = out.File
